// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockDraggable moves blocks: Initial order 1`] = `
"<!-- fin:paragraph -->
<p>This is a paragraph.</p>
<!-- /fin:paragraph -->

<!-- fin:image {"sizeSlug":"large"} -->
<figure class="fin-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fin:image -->

<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:gallery {"linkTo":"none"} -->
<figure class="fin-block-gallery has-nested-images columns-default is-cropped"><!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fin:image -->

<!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fin:image --></figure>
<!-- /fin:gallery -->"
`;

exports[`BlockDraggable moves blocks: Paragraph block moved from first to second position 1`] = `
"<!-- fin:image {"sizeSlug":"large"} -->
<figure class="fin-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fin:image -->

<!-- fin:paragraph -->
<p>This is a paragraph.</p>
<!-- /fin:paragraph -->

<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:gallery {"linkTo":"none"} -->
<figure class="fin-block-gallery has-nested-images columns-default is-cropped"><!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fin:image -->

<!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fin:image --></figure>
<!-- /fin:gallery -->"
`;

exports[`BlockDraggable moves blocks: Spacer block moved from third to first position 1`] = `
"<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:image {"sizeSlug":"large"} -->
<figure class="fin-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fin:image -->

<!-- fin:paragraph -->
<p>This is a paragraph.</p>
<!-- /fin:paragraph -->

<!-- fin:gallery {"linkTo":"none"} -->
<figure class="fin-block-gallery has-nested-images columns-default is-cropped"><!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fin:image -->

<!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://cldup.com/cXyG__fTLN.jpg" alt=""/></figure>
<!-- /fin:image --></figure>
<!-- /fin:gallery -->"
`;
